--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "personal-website",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "homepage": "https://barilchaton.github.io/CKK",
   "private": true,
   "dependencies": {
+    "@react-three/fiber": "^8.16.8",
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-icons": "^4.4.0",
+    "@types/three": "^0.165.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
-    "react-scroll": "^1.8.7",
-    "web-vitals": "^2.1.4"
+    "react-scroll": "^1.9.0",
+    "redux": "^5.0.1",
+    "three": "^0.165.0",
+    "web-vitals": "^4.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -41,9 +48,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "gh-pages": "^4.0.0",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24"
+    "autoprefixer": "^10.4.19",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
   }
 }
